# data_ingestion-

./: .gitattributes  .gitignore  PROJECT.md  README.md  README_v1.md  TP1.ipynb  TP1bis.ipynb  TP2.ipynb  TP2.old.ipynb  TP3.ipynb  TP4.ipynb  TP5.ipynb  TP6.ipynb  alembic.ini  business rules.txt  main.py  models.py  py-init.ipynb  pyproject.toml  releves_incidents_anonymised.csv  sample_data.csv  suivi_projet_ia.md  test.ipynb  tp_ml_presentation.html
Docker/: .env.sample  Readme.md
alembic/: env.py
alembic/versions/: 454eda74d1b4_add_silver_tables.py  4cfc3216b636_expand_gold_features.py  b74e16597ef9_create_bronze_tables.py  c2bcc04232cd_add_incidents_parse_flags.py  cc83a31393a7_add_ingestion_batch_operator_dq.py  f9cde5e0c2a3_add_gold_table.py
artifacts/ingestions/incidents/202606181603/: releves_incidents_silver.csv
artifacts/ingestions/incidents/202606181714/: releves_incidents_anonymised.csv
artifacts/ingestions/incidents/202606181716/: releves_incidents_silver.csv
